[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/icons/thumb-down.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/thumb-up.png" type="Texture" id=2]
[ext_resource path="res://src/dreamscape/Overworld/StoryRatings.gd" type="Script" id=3]

[node name="StoryRatings" type="VBoxContainer"]
margin_left = 40.0
margin_right = 70.0
margin_bottom = 64.0
script = ExtResource( 3 )

[node name="Like" type="Button" parent="."]
unique_name_in_owner = true
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true

[node name="Dislike" type="Button" parent="."]
unique_name_in_owner = true
margin_top = 34.0
margin_right = 30.0
margin_bottom = 64.0
rect_min_size = Vector2( 30, 30 )
icon = ExtResource( 1 )
flat = true
icon_align = 1
expand_icon = true

[node name="DescriptionPopup" type="PopupPanel" parent="." groups=["info_popup"]]
unique_name_in_owner = true
margin_right = 8.0
margin_bottom = 8.0

[node name="RichTextLabel" type="RichTextLabel" parent="DescriptionPopup"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 4.0
margin_right = 304.0
margin_bottom = 19.0
rect_min_size = Vector2( 300, 0 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[connection signal="mouse_entered" from="Like" to="." method="_on_Like_mouse_entered"]
[connection signal="mouse_exited" from="Like" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Like" to="." method="_on_Like_pressed"]
[connection signal="mouse_entered" from="Dislike" to="." method="_on_Dislike_mouse_entered"]
[connection signal="mouse_exited" from="Dislike" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Dislike" to="." method="_on_Dislike_pressed"]
